tests/fixtures/pass/box_resource.sali
let Resource = struct(value: i32)

extend Resource: Drop {
  let drop(mut borrow self)(): () = {
    let checked = 1 / self.value
  }
}

let main(): i32 = {
  let boxed = box_new(Resource(1))
  42
}
